<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrarseActivity"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="-9dp">

    <TextView
        android:id="@+id/resgistrobajada"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/cascadiafont"
        android:text="@string/bajadaregistro"
        android:textColor="#EE666E"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoDavicio"
        app:layout_constraintVertical_bias="0.023" />

    <ImageView
        android:id="@+id/logoDavicio"
        android:layout_width="171dp"
        android:layout_height="102dp"
        android:contentDescription="@string/logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.109"
        app:srcCompat="@drawable/logo" />

    <EditText
        android:id="@+id/nombreregisro"
        android:layout_width="325dp"
        android:layout_height="61dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/hintresgistro"
        android:ems="10"
        android:hint="@string/nombreregistro"
        android:inputType="text"
        android:textColor="@color/black"
        android:textColorHint="@color/texthint"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resgistrobajada" />

    <EditText
        android:id="@+id/apellidoresgistro"
        android:layout_width="325dp"
        android:layout_height="61dp"
        android:layout_marginTop="4dp"
        android:backgroundTint="@color/hintresgistro"
        android:ems="10"
        android:hint="@string/apellidoregistro"
        android:inputType="text"
        android:textColor="@color/black"
        android:textColorHint="@color/texthint"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nombreregisro" />

    <EditText
        android:id="@+id/contraseniaresgistro"
        android:layout_width="325dp"
        android:layout_height="61dp"
        android:layout_marginTop="12dp"
        android:backgroundTint="@color/hintresgistro"
        android:ems="10"
        android:hint="@string/contraseniaregistro"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:textColorHint="@color/texthint"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mailregistro"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/mailregistro"
        android:layout_width="325dp"
        android:layout_height="61dp"
        android:layout_marginTop="4dp"
        android:backgroundTint="@color/hintresgistro"
        android:ems="10"
        android:hint="@string/mailregistro"
        android:inputType="text"
        android:textColor="@color/black"
        android:textColorHint="@color/texthint"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/apellidoresgistro" />

    <TextView
        android:id="@+id/camposincompletos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/cascadiafont"
        android:text=""
        android:textColor="@color/magenta"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contraseniaresgistro"
        app:layout_constraintVertical_bias="0.011" />

    <ImageButton
        android:id="@+id/btncancelarregistro"
        android:layout_width="171dp"
        android:layout_height="61dp"
        android:adjustViewBounds="true"
        android:background="@null"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.891"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/camposincompletos"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/btncancelar" />

    <ImageButton
        android:id="@+id/btnregistrarse"
        android:layout_width="168dp"
        android:layout_height="60dp"
        android:adjustViewBounds="true"
        android:background="@null"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btncancelarregistro"
        app:layout_constraintHorizontal_bias="0.565"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/camposincompletos"
        app:layout_constraintVertical_bias="0.01"
        app:srcCompat="@drawable/btnregistrase" />


</androidx.constraintlayout.widget.ConstraintLayout>